add linting update build update to use new surface service

--- a/app/index.html
+++ b/app/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Mono" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
-    <link href="../node_modules/@webformula/pax-components/dist/theme.css" rel="stylesheet">
-    <link href="../node_modules/@webformula/pax-components/dist/entry.css" rel="stylesheet">
-    <script src="../node_modules/@webformula/pax-components/dist/entry.js" type="module"></script>
+    <link href="/@webformula/pax-components/release/theme.css" rel="stylesheet">
+    <link href="/@webformula/pax-components/release/entry.css" rel="stylesheet">
+    <script src="/@webformula/pax-components/release/entry.js" type="module"></script>
     <script src="entry.js" type="module"></script>
   </head>
 
@@ -19,7 +19,7 @@
         <mdw-icon>home</mdw-icon>
       </mdw-button>
     
-      <mdw-button class="mdw-icon">
+      <mdw-button class="mdw-icon" href="#/favorites">
         <mdw-icon>star</mdw-icon>
         star
       </mdw-button>
